[package]
name = "online-tikv-recover"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.kvproto]
git = "https://github.com/pingcap/kvproto.git"
rev = "dda0a102bc6ac7371e1f99cd2797825aa210b4a0"
default-features = false
features = ["protobuf-codec"]

[patch.crates-io]
protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev = "82b49fea7e696fd647b5aca0a6c6ec944eab3189" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", rev = "82b49fea7e696fd647b5aca0a6c6ec944eab3189" }
